--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<html>
+  <head>
+   
+  </head>
+  <body>
+    <div class="grid-container">
+      <div class="one">1</div>
+      <div class="one">2</div>
+      <div class="one">3</div>
+      <div class="one">4</div>
+      <div class="one">5</div>
+      <div class="one">6</div>
+  </body>
+  
+</html>
