--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
   <head>
-   
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="grid-container">
-      <div class="one">1</div>
-      <div class="one">2</div>
-      <div class="one">3</div>
-      <div class="one">4</div>
-      <div class="one">5</div>
-      <div class="one">6</div>
+    <div class="parent">
+      <div class="div1"> HEADER </div>
+      <div class="div2"> FOOTER </div>
+      <div class="div3"> NAVIGATION</div>
+      <div class="div4"> BODY</div>
+      <div class="div5"> NEWS </div>
+      <div class="div6"> IMAGE/ADVT</div>
+    </div>
   </body>
   
 </html>
