--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <html>
   <head>
    <link rel="stylesheet" href="style.css">
+   <link href="https://fonts.cdnfonts.com/css/samsung-sans-4" rel="stylesheet">
+                
   </head>
   <body>
     <div class="parent">
-      <div class="div1"> HEADER </div>
-      <div class="div2"> FOOTER </div>
-      <div class="div3"> NAVIGATION</div>
-      <div class="div4"> BODY</div>
+      <div class="div1"> <h1>OneFootBall</h1> </div>
+      <div class="div2"> <h2>ONEFOOTBALL &COPY;2023</h2> </div>
+      <div class="div3"> <nav>
+        <ul>
+          <li>HOME</li>
+          <LI>NEWS</LI>
+          <li>LEAGUES</li>
+          <LI>FANTASY</LI>
+        </ul>
+      </nav></div>
+      <div class="div4"><h2>Manchester City fans and players celebrate historic Treble in the rain</h2>
+    <article>
+        <img src="trebele.png" height="300px" width="600px">
+        <p>
+            Rodri's side-footed finish midway through the second half broke Inter's resistance and though Federico Dimarco hit the crossbar with a header before Ederson saved sensationally from Romelu Lukaku, City held on to make history in the Ataturk Olympic Stadium.
+
+            <br>Having already overhauled Arsenal to retain the Premier League trophy and beaten Manchester United to lift the FA Cup at Wembley, this victory saw them match the achievement of their city rivals in 1999. Pep Guardiola was in tears afterwards.
+        </p>
+    </article></div>
+
       <div class="div5"> NEWS </div>
-      <div class="div6"> IMAGE/ADVT</div>
+      <div class="div6"> <img src="messi.jpg" width="300px" height="450px"></div>
+      <div class="div7"><img class="league-pic" src="UCL TROPHY.png">
+    <img src="UELTROPHY.png" height=73px width="75px">
+    <img width="45px" height="70px" src="UEFAECLTROPHY.png"></div>
     </div>
   </body>
   
