--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
-<html>
-  <head>
-   <link rel="stylesheet" href="style.css">
-   <link href="https://fonts.cdnfonts.com/css/samsung-sans-4" rel="stylesheet">
-                
-  </head>
-  <body>
-    <div class="parent">
-      <div class="div1"> <h1>OneFootBall</h1> </div>
-      <div class="div2"> <h2>ONEFOOTBALL &COPY;2023</h2> </div>
-      <div class="div3"> <nav>
-        <ul>
-          <li>HOME</li>
-          <LI>NEWS</LI>
-          <li>LEAGUES</li>
-          <LI>FANTASY</LI>
-        </ul>
-      </nav></div>
-      <div class="div4"><h2>Manchester City fans and players celebrate historic Treble in the rain</h2>
-    <article>
-        <img src="trebele.png" height="300px" width="600px">
-        <p>
-            Rodri's side-footed finish midway through the second half broke Inter's resistance and though Federico Dimarco hit the crossbar with a header before Ederson saved sensationally from Romelu Lukaku, City held on to make history in the Ataturk Olympic Stadium.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style3.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+</head>
+<body>
+    <img src="banner (3).jpg" class="banner">
+    <div class="container">
+        <div class="league-pic">
+          <img class="uclpic" src="UCL TROPHY.png">
+          <img class="uconlpic" src="UEFAECLTROPHY.png">
+          <img class="ueuclpic" src="UELTROPHY.png">
+          <img class="premier-league" src="pl.png">
+          <img class="serie-A" src="seriaA.png">
+          <img class="ligue1" src="ligue1.png">
+          <img class="laliga" src="laliga.png">
+          <img class="bundes" src="bundes.png">
+          
 
-            <br>Having already overhauled Arsenal to retain the Premier League trophy and beaten Manchester United to lift the FA Cup at Wembley, this victory saw them match the achievement of their city rivals in 1999. Pep Guardiola was in tears afterwards.
-        </p>
-    </article></div>
-
-      <div class="div5"> NEWS </div>
-      <div class="div6"> <img src="messi.jpg" width="300px" height="450px"></div>
-      <div class="div7"><img class="league-pic" src="UCL TROPHY.png">
-    <img src="UELTROPHY.png" height=73px width="75px">
-    <img width="45px" height="70px" src="UEFAECLTROPHY.png"></div>
+        </div>
+        <div class="navigation">
+          <nav>
+            <ul>
+              <li>HOME</li>
+              <li>NEWS</li>
+              <li>PHOTOS</li>
+              <li>FANTASY</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="main-body">
+          <h2 style="text-decoration: underline;">City claim European glory :-</h1><br>
+          <article>
+            <p style="text-align: justify;">
+              City navigated an unbeaten path to the final, racking up a competition-best 31 goals in the process, so it was little surprise that they started on the front foot. Inter had let in only one goal in six knockout games, however, and for so long did an excellent job of marshalling their opponents' galaxy of attacking talent.
+            </p>
+            <img src="trebele.png" class="treble">
+          </article>
+        </div>
+        <div class="side-advt">Advt</div>
+        <div class="foot">Footer</div>
     </div>
-  </body>
-  
+</body>
 </html>
