--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <ul>
               <li>HOME</li>
               <li>NEWS</li>
-              <li>PHOTOS</li>
+              <li>TRANSFERS</li>
               <li>FANTASY</li>
             </ul>
           </nav>
         </div>
         <div class="main-body">
-          <h2 style="text-decoration: underline;">City claim European glory :-</h1><br>
+          <h1>Latest News</h1>
+          <h2 style="text-decoration: underline;">City claim European glory :-</h2><br>
           <article>
             <p style="text-align: justify;">
               City navigated an unbeaten path to the final, racking up a competition-best 31 goals in the process, so it was little surprise that they started on the front foot. Inter had let in only one goal in six knockout games, however, and for so long did an excellent job of marshalling their opponents' galaxy of attacking talent.
