--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul>
               <li>HOME</li>
               <li>NEWS</li>
-              <li>TRANSFERS</li>
+              <li><a href="transfer.html">TRANSFERS</a></li>
               <li>FANTASY</li>
             </ul>
           </nav>
