--- a/transfer.html
+++ b/transfer.html
@@ -24,8 +24,8 @@
   }
   .arrow {
     position: absolute;
-    top: 50%;
-    left: 59%;
+    top: 32%;
+    left: 61%;
     transform: translate(-50%, -50%);
     transform: rotate(270deg);
     cursor: pointer;
@@ -69,7 +69,7 @@
 
 </head>
 <body>
-    <img src="banner (3).png" class="banner">
+    <img src="banner (3).jpg" class="banner">
     <div class="container">
         <div class="league-pic">
           <img class="uclpic" src="UCL TROPHY.png">
