--- a/transfer.html
+++ b/transfer.html
@@ -69,7 +69,7 @@
 
 </head>
 <body>
-    <img src="banner (3).jpg" class="banner">
+    <img src="cr7banner.jpg" class="banner">
     <div class="container">
         <div class="league-pic">
           <img class="uclpic" src="UCL TROPHY.png">
