--- a/transfer.html
+++ b/transfer.html
@@ -82,7 +82,7 @@
 
 </head>
 <body>
-    <img src="cr7banner.jpg" class="banner">
+    <img src="cr7banner.jpg" class="banner" width="150%">
     <div class="container">
         <div class="league-pic">
           <img class="uclpic" src="UCL TROPHY.png">
