--- a/transfer.html
+++ b/transfer.html
@@ -25,23 +25,22 @@
     grid-row: 2;
   }
   table{
-    width: 85%;
+    width: 80%;
     text-align: center;
-    background-color: rgba(103, 30, 145, 0.5);
+    background-color: rgba(209, 15, 190, 0.5);
   }
   td{
-            padding:14px;
-            border: solid 2px;
-            border-color: rgb(247, 6, 255);
-        }    
-        .arrow {
+    padding:14px;
+            
+  }    
+  .arrow {
     position: absolute;
     margin-left: -10px;
     margin-top: -20px;
     transform: translate(-50%, -50%);
     transform: rotate(270deg);
     cursor: pointer;
-}
+ }
 
 .arrow span {
     
@@ -118,7 +117,7 @@
                 <td>TO</td>
             </tr>
             <tr>
-                <td><img src="messitransfer.png" width="100px"></td>
+                <td><img src="messitransfer.png" width="100px">Lionel <br>Messi</td>
                 <td><img src="psg.png" width="100px"></td>
                 <td>
                     <div class="arrow">
@@ -130,8 +129,8 @@
                 <td><img src="intermiami.png" width="150px"></td>
             </tr>
             <tr>
-              <td><img src="messitransfer.png" width="100px"></td>
-              <td><img src="psg.png" width="100px"></td>
+              <td><img src="jude.png" width="100px">Jude Bellingam</td>
+              <td><img src="dortmund.png" width="100px"></td>
               <td>
                   <div class="arrow">
                   <span></span>
@@ -139,11 +138,11 @@
                   <span></span>
                 </div>
               </td>
-              <td><img src="intermiami.png" width="150px"></td>
+              <td><img src="real madrid.png" width="110px"></td>
           </tr>
           <tr>
-            <td><img src="messitransfer.png" width="100px"></td>
-            <td><img src="psg.png" width="100px"></td>
+            <td><img src="mcallister.png" width="100px">Alexis <br>Mac Allister</td>
+            <td><img src="brighton.png" width="150px"></td>
             <td>
                 <div class="arrow">
                 <span></span>
@@ -151,7 +150,7 @@
                 <span></span>
               </div>
             </td>
-            <td><img src="intermiami.png" width="150px"></td>
+            <td><img src="arsenal.png" width="90px"></td>
         </tr>
         </table>
 
