--- a/transfer.html
+++ b/transfer.html
@@ -24,14 +24,13 @@
     margin-top: -60px;
     grid-row: 2;
   }
-  table{
-    width: 80%;
+  table{  
     text-align: center;
     background-color: rgba(209, 15, 190, 0.5);
   }
   td{
     padding:5px;
-            
+    width:20px;  
   }    
   .arrow {
     position: absolute;
