--- a/transfer.html
+++ b/transfer.html
@@ -80,7 +80,7 @@
 
 </head>
 <body>
-    <img src="cr7banner.jpg" class="banner" >
+    <img src="cr7banner.jpg" class="banner" width="950px" >
     <div class="container">
         <div class="league-pic">
           <img class="uclpic" src="UCL TROPHY.png">
