--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="navigation">
           <nav>
             <ul>
-              <li>HOME</li>
+              <li><a href="index.html" style="text-decoration: none;color: rgb(255, 3, 221);">HOME</a></li>
               <li>NEWS</li>
-              <li><a href="transfer.html">TRANSFERS</a></li>
+              <li><a href="transfer.html" style="text-decoration: none; color:aqua">TRANSFERS</a></li>
               <li>FANTASY</li>
             </ul>
           </nav>
