--- a/transfer.html
+++ b/transfer.html
@@ -20,9 +20,10 @@
     grid-row: 1;
     box-shadow:  0PX 5PX 5PX rgb(255, 2, 234);
     border-radius: 10PX;
+    height: 90px;
   }
   .main-body{
-    margin-top: 10px;
+    margin-top: -50px;
     grid-row: 2;
   }
   table{  
@@ -31,9 +32,11 @@
     background-color: rgba(209, 15, 190, 0.5);
     box-shadow: 0PX 10PX 10PX 5PX rgb(255, 2, 234);
     border-radius: 20PX;
+    padding: 20px;
+    width: 100%;
   }
   td{
-    
+    border: 2px solid;
     border-color: rgb(255, 3, 221);
     padding:0px;
     width:20px;  
@@ -59,7 +62,8 @@
     animation: animate 1.5s infinite;
 }
 li{
-  margin-right: 45px;
+   text-align: center;
+   width: 100px;
 }
 
 .arrow span:nth-child(2) {
@@ -122,6 +126,7 @@ li{
           <h1>Latest Transfers</h1>
           <table>
             <tr>
+                <td style="width:100px">SL#</td>
                 <td>Player</td>
                 <td>From</td>
                 <td width="90px">
@@ -131,8 +136,9 @@ li{
                 <td>Value</td>
             </tr>
             <tr>
-                <td><img src="messitransfer.png" width="80px">Lionel Messi</td>
-                <td><img src="psg.png" width="70px"></td>
+              <TD>1.</TD>
+                <td><img src="messitransfer.png" width="100px">Lionel Messi</td>
+                <td><img src="psg.png" width="90px"></td>
                 <td>
                     <div class="arrow">
                     <span></span>
@@ -140,12 +146,13 @@ li{
                     <span></span>
                   </div>
                 </td>
-                <td><img src="intermiami.png" width="100px"></td>
+                <td><img src="intermiami.png" width="120px"></td>
                 <td>£45M</td>
               </tr>
             <tr>
-              <td><img src="jude.png" width="70px">JudeBellingam</td>
-              <td><img src="dortmund.png" width="70px"></td>
+              <TD>2.</TD>
+              <td><img src="jude.png" width="100px">Jude Bellingam</td>
+              <td><img src="dortmund.png" width="90px"></td>
               <td>
                   <div class="arrow">
                   <span></span>
@@ -153,12 +160,13 @@ li{
                   <span></span>
                 </div>
               </td>
-              <td><img src="real madrid.png" width="80px"></td>
-              <td>Unspecified</td>
+              <td><img src="real madrid.png" width="90px"></td>
+              <td>----</td>
             </tr>
           <tr>
-            <td><img src="mcallister.png" width="80px">Mac-Allister</td>
-            <td><img src="brighton.png" width="120px"></td>
+            <TD>3.</TD>
+            <td><img src="mcallister.png" width="100px">Alexis Mac-Allister</td>
+            <td><img src="brighton.png" width="140px"></td>
             <td>
                 <div class="arrow">
                 <span></span>
@@ -166,8 +174,22 @@ li{
                 <span></span>
               </div>
             </td>
-            <td><img src="arsenal.png" width="70px"></td>
+            <td><img src="arsenal.png" width="80px"></td>
             <td>£36M</td>
+          </tr>
+          <tr>
+            <TD>4.</TD>
+            <td><img src="enzo.png" width="100px">Enzo Fernandes</td>
+            <td><img src="benefica.png" width="70px"></td>
+            <td>
+                <div class="arrow">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </td>
+            <td><img src="chelsea.png" width="70px"></td>
+            <td>£106.8M</td>
           </tr>
         </table>
 
