--- a/transfer.html
+++ b/transfer.html
@@ -66,10 +66,13 @@
     margin: 0px;
     animation: animate 1.5s infinite;
 }
-li{
-   text-align: center;
+
+  nav{
+    text-align: center;
+    width: 100%;
+  }
    
-}
+
 
 .arrow span:nth-child(2) {
     animation-delay: -0.2s;
@@ -101,7 +104,7 @@ li{
 
 </head>
 <body>
-    <img src="cr7banner.jpg" class="banner" width="950px" >
+    <img src="cr7banner.jpg" class="banner">
     <div class="container">
         <div class="league-pic">
           <img class="uclpic" src="UCL TROPHY.png">
@@ -121,7 +124,7 @@ li{
           <nav>
             <ul>
               <li><a href="index.html" style="text-decoration: none;color: aqua;">HOME</a></li>
-              <li>NEWS</li>
+              <li><a href="news.html">NEWS</a></li>
               <li><a href="transfer.html"style="text-decoration: none;color: rgb(255, 3, 221) ">TRANSFERS</a></li>
               <li>FANTASY</li>
             </ul>
