--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <nav>
             <ul>
               <li><a href="index.html" style="text-decoration: none;color: rgb(255, 3, 221);">HOME</a></li>
-              <li>NEWS</li>
+              <li><a href="news.html" style="color: aqua;text-decoration: none;">NEWS</a></li>
               <li><a href="transfer.html" style="text-decoration: none; color:aqua">TRANSFERS</a></li>
               <li>FANTASY</li>
             </ul>
