--- a/news.html
+++ b/news.html
@@ -48,8 +48,8 @@
         <div class="navigation">
           <nav>
             <ul>
-              <li><a href="index.html" style="text-decoration: none;color: rgb(255, 3, 221);">HOME</a></li>
-              <li>NEWS</li>
+              <li><a href="index.html" style="text-decoration: none;color: aqua;">HOME</a></li>
+              <li><a href="news.html" style="text-decoration: none;color: rgb(255, 2, 234);">NEWS</a></li>
               <li><a href="transfer.html" style="text-decoration: none; color:aqua">TRANSFERS</a></li>
               <li>FANTASY</li>
             </ul>
