--- a/transfer.html
+++ b/transfer.html
@@ -124,8 +124,8 @@
           <nav>
             <ul>
               <li><a href="index.html" style="text-decoration: none;color: aqua;">HOME</a></li>
-              <li><a href="news.html">NEWS</a></li>
-              <li><a href="transfer.html"style="text-decoration: none;color: rgb(255, 3, 221) ">TRANSFERS</a></li>
+              <li><a href="news.html" style="text-decoration: none;color: aqua;">NEWS</a></li>
+              <li><a style="text-decoration: none;color: rgb(255, 2, 234);" src="transfer.html">TRANSFERS</a></li>
               <li>FANTASY</li>
             </ul>
           </nav>
