--- a/news.html
+++ b/news.html
@@ -26,6 +26,8 @@
           <img class="bundes" src="bundes.png">
           <img class="bundes" src="ISL.png">
           <img class="premier-league" style="margin-left: 15px;"src="mls.png">
+          <img class="premier-league" style="margin-left: 15px;" src="spl.png">
+          <img class="premier-league" style="margin-left: 15px;" src="ere.png">
           
 
         </div>
