--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
           <img class="laliga" src="laliga.png">
           <img class="bundes" src="bundes.png">
           <img class="bundes" src="ISL.png">
-          <img class="premier-league" style="margin-left: 15px;"src="mls.png">
-      </div>
+          <img class="premier-league" style="margin-left: 15px;" src="mls.png">
+          <img class="premier-league" style="margin-left: 15px;" src="spl.png">
+          <img class="premier-league" style="margin-left: 15px;" src="ere.png">
+        
+        </div>
       <div class="navigation">
         
           <nav>
