--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li><a style="color:white;"href="index.html">HOME</a></li>
               <li><a href="news.html">NEWS</a></li>
               <li><a href="transfer.html">TRANSFERS</a></li>
-              <li><a href="">FANTASY</a></li>
+              <li><a href="fantasy.html">FANTASY</a></li>
             </ul>
           </nav>
         
