--- a/fantasy.html
+++ b/fantasy.html
@@ -34,8 +34,8 @@
             <ul>
               <li><a href="index.html" style="text-decoration: none;color: aqua;">HOME</a></li>
               <li><a href="news.html" style="text-decoration: none;color: aqua;">NEWS</a></li>
-              <li><a style="text-decoration: none;color: rgb(255, 2, 234);" src="transfer.html">TRANSFERS</a></li>
-              <li><a href="fantasy.html">FANTASY</a></li>
+              <li><a href="transfer.html">TRANSFERS</a></li>
+              <li><a style="text-decoration: none;color: rgb(255, 2, 234);" href="fantasy.html">TOTM</a></li>
             </ul>
           </nav>
         </div>
