--- a/news.html
+++ b/news.html
@@ -37,7 +37,7 @@
               <li><a href="index.html" style="text-decoration: none;color: aqua;">HOME</a></li>
               <li><a href="news.html" style="text-decoration: none;color: rgb(255, 2, 234);">NEWS</a></li>
               <li><a href="transfer.html" style="text-decoration: none; color:aqua">TRANSFERS</a></li>
-              <li><a href="fantasy.html">FANTASY</a></li>
+              <li><a href="fantasy.html">TOTM</a></li>
             </ul>
           </nav>
         </div>
