--- a/index.html
+++ b/index.html
@@ -4,33 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
-<style>
-  nav{
-    height: 500%;
-  }
-</style>
+
 </head>
 <body>
     <img src="banner (3).jpg" class="banner">
     <div class="container">
         <div class="league-pic">
-          <a href><img class="uclpic" src="UCL TROPHY.png"></a>
+          <img class="uclpic" src="UCL TROPHY.png">
           <img class="uconlpic" src="UEFAECLTROPHY.png">
           <img class="ueuclpic" src="UELTROPHY.png">
-          <img class="premier-league" src="PL.png">
+          <img class="premier-league" src="pl.png">
           <img class="serie-A" src="seriaA.png">
           <img class="ligue1" src="ligue1.png">
           <img class="laliga" src="laliga.png">
           <img class="bundes" src="bundes.png">
           <img class="bundes" src="ISL.png">
-          <img class="mls"  src="mls.png">
-          <img class="mls" src="spl.png">
-          <img class="premier-league" src="ere.png">
+          <img class="premier-league" style="margin-left: 15px;"src="mls.png">
+          <img class="premier-league" style="margin-left: 15px;" src="spl.png">
+          
         
         </div>
       <div class="navigation">
