--- a/news.html
+++ b/news.html
@@ -10,7 +10,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="banner (3).jpg" class="banner">
+  <header style="background-color: black;">
+    <video autoplay width="1280px" height="90px">
+      <source src="logo.mp4" type="video/mp4">
+    </video>
+  </header>
     <div class="container">
         <div class="league-pic">
           
@@ -39,7 +43,7 @@
             </ul>
           </nav>
         </div>
-        <div class="main-body">
+        <div class="main-body-news">
           <h1>Latest News</h1>
           <h2 style="text-decoration: underline;">City claim European glory :-</h2><br>
           <article>
