--- a/transfer.html
+++ b/transfer.html
@@ -13,7 +13,9 @@
     display:none;
   }
   
-
+  body{
+    color:rgb(17, 224, 224)
+  }
   
   
 </style>
@@ -22,7 +24,12 @@
 
 </head>
 <body>
-    <img src="cr7banner.jpg" class="banner">
+
+  <header style="background-color: black;">
+    <video autoplay width="1280px" height="90px">
+      <source src="logo.mp4" type="video/mp4">
+    </video>
+  </header>
     <div class="container">
         <div class="league-pic">
           <img class="uclpic" src="UCL TROPHY.png">
@@ -141,7 +148,7 @@
               </div>
             </td>
             <td><img src="real madrid.png" width="77px"></td>
-            <td>----</td>
+            <td>£200M</td>
           </tr>
 
           <tr>
