--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header style="background-color: black;">
-  <video autoplay width="1280px" height="90px">
+  <video autoplay >
     <source src="logo.mp4" type="video/mp4">
   </video>
 </header>
