--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
     <div class="container">
         <div class="league-pic">
-          <img class="uclpic" src="UCL TROPHY.png">
+          <a href="https://www.uefa.com/uefachampionsleague/"> <img class="uclpic" src="UCL TROPHY.png"> </a>
           <img class="uconlpic" src="UEFAECLTROPHY.png">
           <img class="ueuclpic" src="UELTROPHY.png">
           <img class="premier-league" src="pl.png">
