--- a/news.html
+++ b/news.html
@@ -62,6 +62,14 @@
             </p>
             
           </article>
+           <article>
+            <img src="havertz.jpg" class="treble">
+            <p style="text-align: justify;">
+                The Gunners have made their move for top target Declan Rice and are now chasing a deal to sign Kai Havertz from rivals Chelsea in an eye-catching start to the summer trading period.<br>
+                The Blues are believed to be keen to recoup the money they spent to sign Havertz in 2020, in excess of £70m, and sources have confirmed that Real Madrid have backed away from the negotiating table as things stand.
+            </p>
+            
+          </article>
         </div>
         <div class="side-advt"></div>
         <div class="foot" style="text-align: center;">MyFootBall11 &copy;2023</div>
