--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <div class="container">
         <div class="league-pic">
           <a href="https://www.uefa.com/uefachampionsleague/"> <img class="uclpic" src="UCL TROPHY.png"> </a>
-          <a href="https://www.uefa.com/uefaeuropaconferenceleague/"></a><img class="uconlpic" src="UEFAECLTROPHY.png"></a>
-          <a href="https://www.uefa.com/uefaeuropaleague/"></a><img class="ueuclpic" src="UELTROPHY.png"></a>
-          <a href="https://www.premierleague.com/"></a><img class="premier-league" src="pl.png"></a>
-          <a href="https://www.espn.com/soccer/standings/_/league/bra.1"></a><img class="serie-A" src="seriaA.png"></a>
-          <a href="https://www.ligue1.com/"></a><img class="ligue1" src="ligue1.png"></a>
-          <a href="https://www.laliga.com/en-GB/laliga-easports"></a><img class="laliga" src="laliga.png"></a>
-          <a href="https://www.bundesliga.com/en/bundesliga"></a><img class="bundes" src="bundes.png"></a>
-          <a href="https://www.indiansuperleague.com/"></a><img class="bundes" src="ISL.png"></a>
-          <a href="https://www.mlssoccer.com/"></a><img class="premier-league" style="margin-left: 15px;"src="mls.png"></a>
-          <a href="https://www.bcspl.ca/"></a><img class="premier-league" style="margin-left: 15px;" src="spl.png"></a>
+          <a href="https://www.uefa.com/uefaeuropaconferenceleague/"><img class="uconlpic" src="UEFAECLTROPHY.png"></a>
+          <a href="https://www.uefa.com/uefaeuropaleague/"><img class="ueuclpic" src="UELTROPHY.png"></a>
+          <a href="https://www.premierleague.com/"><img class="premier-league" src="pl.png"></a>
+          <a href="https://www.espn.com/soccer/standings/_/league/bra.1"><img class="serie-A" src="seriaA.png"></a>
+          <a href="https://www.ligue1.com/"><img class="ligue1" src="ligue1.png"></a>
+          <a href="https://www.laliga.com/en-GB/laliga-easports"><img class="laliga" src="laliga.png"></a>
+          <a href="https://www.bundesliga.com/en/bundesliga"><img class="bundes" src="bundes.png"></a>
+          <a href="https://www.indiansuperleague.com/"><img class="bundes" src="ISL.png"></a>
+          <a href="https://www.mlssoccer.com/"><img class="premier-league" style="margin-left: 15px;"src="mls.png"></a>
+          <a href="https://www.bcspl.ca/"><img class="premier-league" style="margin-left: 15px;" src="spl.png"></a>
           
         
         </div>
