--- a/news.html
+++ b/news.html
@@ -43,7 +43,7 @@
         </div>
         <div class="main-body-news">
           <h1>Latest News</h1>
-          <h2 style="text-decoration: underline;">City claim European glory :-</h2><br>
+          <h2 style="text-decoration: underline;">City claim European glory</h2><br>
           <article>
             <img src="trebele.png" class="treble">
             <p style="text-align: justify;">
