--- a/index.html
+++ b/index.html
@@ -100,6 +100,116 @@
                 12:30PM
               </TD>
             </tr>
+            <tr>
+              <td>
+                11 Aug
+              </td>
+              <td>
+                BAR VS RM
+              </td>
+              <TD>
+                10:30AM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                15 Aug
+              </td>
+              <td>
+                LIV VS MANC
+              </td>
+              <TD>
+                12:30PM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                16 Aug
+              </td>
+              <td>
+                ALM VS RAYO
+              </td>
+              <TD>
+                10:30AM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                18 Aug
+              </td>
+              <td>
+                MANU VS CHEL
+              </td>
+              <TD>
+                12:30PM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                19 Aug
+              </td>
+              <td>
+                MANU VS MANC
+              </td>
+              <TD>
+                14:30AM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                21 Aug
+              </td>
+              <td>
+                SEV VS VAL
+              </td>
+              <TD>
+                12:30PM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                22 Aug
+              </td>
+              <td>
+                RM VS VAL
+              </td>
+              <TD>
+                10:30AM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                24 Aug
+              </td>
+              <td>
+                PSG VS OL
+              </td>
+              <TD>
+                12:30PM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                25 Aug
+              </td>
+              <td>
+                AL-hilal vs Al-Nassar
+              </td>
+              <TD>
+                10:30AM
+              </TD>
+            </tr>
+            <tr>
+              <td>
+                31 Aug
+              </td>
+              <td>
+                SEV VS VAL
+              </td>
+              <TD>
+                1:30PM
+              </TD>
+            </tr>
         </table>
       </div>
         <div class="main-body-index">
